<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".Registro"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/completeName"
        android:gravity="center"
        android:id="@+id/nameReg" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </View>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/nickReg"
        android:gravity="center"
        android:id="@+id/nickReg"
        android:layout_gravity="center_horizontal" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </View>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:gravity="center"
        android:id="@+id/passwordReg"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </View>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:hint="@string/passwordComp"
        android:gravity="center"
        android:id="@+id/passwordReg2"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </View>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:gravity="center"
        android:id="@+id/emailReg"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </View>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/localidad"
        android:gravity="center"
        android:id="@+id/province"
        android:layout_gravity="center_horizontal" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </View>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/pais"
        android:gravity="center"
        android:id="@+id/nation" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </View>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrar"
        android:id="@+id/btnRegister"
        android:background="#2FD5D5"
        android:textColor="#FFF"
        android:textSize="24dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
